fixing form to align with button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -474,7 +474,7 @@ Form css
 	padding: 13px 0;
 	margin-bottom: 10px;
 	text-align: center;
-	width:100%;
+	width:99%;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-ms-box-sizing: border-box;
@@ -514,8 +514,8 @@ input:focus, textarea:focus {
 	background-color: white;
 	color: #111520;
 	font-size: 18px;
-	padding-top: 16px;
-	padding-bottom: 16px;
+	padding-top: 13px;
+	padding-bottom: 13px;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
